Document PPDG/src/objects/MMR_observation_form__c.object
<CustomObject>
    <description>For use with monitoring HPP sellers</description>
    <fields>
        <fullName>Advised_Sale_or_Execution_Only__c</fullName>
        <inlineHelpText>For Execution only, criteria and documentary evidence needs to be positioned</inlineHelpText>
        <label>Advised Sale or Execution Only?</label>
        <picklist>
            <picklistValues>
                <fullName>Advised Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advised_calls_recorded__c</fullName>
        <inlineHelpText>For training and monitoring purposes</inlineHelpText>
        <label>Advised calls recorded?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agenda_for_todays_call_meeting_covered__c</fullName>
        <inlineHelpText>Go through what you will cover today and timescales</inlineHelpText>
        <label>Agenda for todays call/meeting covered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_priorities_with_customers__c</fullName>
        <inlineHelpText>From needs analysis, established customers core priorities</inlineHelpText>
        <label>Agreed priorities with customers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_fields_adequately_completed__c</fullName>
        <inlineHelpText>Sufficient detail recorded</inlineHelpText>
        <label>All fields adequately completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_fields_sufficiently_completed__c</fullName>
        <inlineHelpText>Sufficient detail recorded</inlineHelpText>
        <label>All fields sufficiently completed.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_completed_correctly__c</fullName>
        <label>Application completed correctly?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_manager_on_time__c</fullName>
        <formula>IF( Line_manager_confirmation__c  &gt;  Date_Actions_to_be_completed_by__c , &apos;No&apos;, &apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved by manager on time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_accurately_completed__c</fullName>
        <inlineHelpText>Consistent to customer&apos;s response and financial history</inlineHelpText>
        <label>BP accurately completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_summary_explained__c</fullName>
        <inlineHelpText>Explain: documents to return, next steps and SLAs, questions clarified</inlineHelpText>
        <label>Closure summary explained?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments10__c</fullName>
        <label>Comments10</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments11__c</fullName>
        <label>Comments11</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments12</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_actions_update__c</fullName>
        <label>Compliance actions update</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Late</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <formula>IF( ISPICKVAL(Overall_rating__c, &quot;C&quot;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000002MblU&quot;, &quot;C&quot;), 
IF( ISPICKVAL(Overall_rating__c, &quot;CD&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000002Mblj&quot;, &quot;CD&quot;), 
IF( ISPICKVAL (Overall_rating__c, &quot;NC&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000002Mblo&quot;, &quot;NC&quot;), null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_recommendation_made_with_satisfa__c</fullName>
        <inlineHelpText>Advisor links recommendation to agreed core priorities</inlineHelpText>
        <label>Correctly recommends/explains?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cover_indicative_payment_affodability__c</fullName>
        <inlineHelpText>Discussed indicative payment &amp; affordability?</inlineHelpText>
        <label>Cover indicative payment/affordability?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_IDD_sections_disclaimer__c</fullName>
        <inlineHelpText>Go through each point and conventional mortgages/insurance disclaimers on IDD</inlineHelpText>
        <label>Covered IDD sections/disclaimers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_IDD_sections_disclaimers__c</fullName>
        <label>Covered IDD disclaimer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_Tariff_List_fees__c</fullName>
        <inlineHelpText>Explain fees applicable and when due: Admin, Valuation, Stamp duty</inlineHelpText>
        <label>Covered Tariff List fees?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_selling_opportunities_identified__c</fullName>
        <inlineHelpText>Did the agent identify potential cross selling opportunities?</inlineHelpText>
        <label>Cross selling opportunities identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_name__c</fullName>
        <label>Customer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Actions_to_be_completed_by__c</fullName>
        <inlineHelpText>To be completed by Compliance</inlineHelpText>
        <label>Date Actions to be completed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_actions_completed_by_seller__c</fullName>
        <inlineHelpText>For use by HPP seller to complete when actions have been completed.</inlineHelpText>
        <label>Date actions completed by seller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_application__c</fullName>
        <label>Date of application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_observation__c</fullName>
        <label>Date of observation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_consolidation_included_impact__c</fullName>
        <inlineHelpText>E.g. Possible extra cost of extending repayment period, switching between unsecured to secured lending</inlineHelpText>
        <label>Debt consolidation included/impact?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_the_advisor_communicate_effectively__c</fullName>
        <inlineHelpText>E.g. Clear, tone, pace, language, allow customer to speak, etc.</inlineHelpText>
        <label>Did the advisor communicate effectively?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_the_advisor_manage_silence_appropria__c</fullName>
        <inlineHelpText>Did the advisor manage silence appropriately? Apologise for delays, manage expectations, explain reason for silence.</inlineHelpText>
        <label>Advisor managed silence correctly?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_the_agent_ask_for_referrals__c</fullName>
        <label>Did the agent ask for referrals?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_the_seller_overcome_all_objections__c</fullName>
        <label>Did the seller overcome all objections?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Established_any_term_budget_in_mind__c</fullName>
        <inlineHelpText>Does the customer have some figures in mind?</inlineHelpText>
        <label>Established any term or budget in mind?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explained_IBB_Solicitor_charge_option__c</fullName>
        <inlineHelpText>Explained IBB Solicitor charge option, to start pre/post signed offer receipt?</inlineHelpText>
        <label>Explained IBB Solicitor charge option?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIS_handed_to_customer_with_key_points__c</fullName>
        <inlineHelpText>Cover key figs including Finance, term, repayments, total costs and cost per £1, rates breakdown and expiry, reversion to SVR, indicative figs</inlineHelpText>
        <label>FIS covered &amp; handed over?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fact_Find_completed_accurately__c</fullName>
        <inlineHelpText>Consistent to customer&apos;s response</inlineHelpText>
        <label>Fact Find completed accurately</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_considerations_discussion_done__c</fullName>
        <inlineHelpText>E.g. Repayments(Stability/Early lump sums/Lower initially), foreseeable changes in income/expenditure, Term, Disposable income</inlineHelpText>
        <label>Financial considerations discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_obs_form__c</fullName>
        <label>Select Observation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advice Check Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full File Checks Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Observation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Play</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_input_correctly__c</fullName>
        <label>Information input correctly?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Introduce_self_and_contact_details__c</fullName>
        <inlineHelpText>Provide business card if F2F</inlineHelpText>
        <label>Introduce self and contact details?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Introduced_use_of_standard_ONS_figs__c</fullName>
        <label>Introduced use of &apos;standard ONS&apos; figs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_manager_confirmation__c</fullName>
        <inlineHelpText>For use by line manager to confirm date actions completed by</inlineHelpText>
        <label>Line manager confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NO_solicitor_recommendation_made__c</fullName>
        <inlineHelpText>NO solicitor recommendation made?</inlineHelpText>
        <label>NO solicitor recommendation made?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Observation_due__c</fullName>
        <label>Next Observation due</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Observer_Comments__c</fullName>
        <label>Observer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observer_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observer name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MMR_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MMR Observation Forms</relationshipLabel>
        <relationshipName>MMR_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outline_credit_scoring_and_underwriting__c</fullName>
        <inlineHelpText>Outlined applications are subject to Credit scoring and underwriting?</inlineHelpText>
        <label>Outline credit scoring and underwriting?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_rating__c</fullName>
        <inlineHelpText>Compliant (C), Compliant with Development (CD), or Non Compliant (NC)</inlineHelpText>
        <label>Overall rating</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overview_of_IBB_product_Sharia_given__c</fullName>
        <inlineHelpText>Did the agent explain the Sharia aspect of the product well? Did the agent explain properly how the product worked?</inlineHelpText>
        <label>Overview of IBB HPP product/Sharia given</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_record_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>People record link</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>MMR Observation Forms (People record link)</relationshipLabel>
        <relationshipName>MMR_Observation_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_F_handed_and_significant_risks_covered__c</fullName>
        <inlineHelpText>R&amp;F handed to customer, with key points including significant risks covered? Key points covered from R&amp;F document</inlineHelpText>
        <label>R&amp;F covered including risks/handed over?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Read_MarketingDPA_disclaimers__c</fullName>
        <label>Read Marketing/DPA disclaimers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recaps_responses_importance_ratings_to_c__c</fullName>
        <inlineHelpText>Verifies responses and customers priorities ratings</inlineHelpText>
        <label>Recaps responses/importance ratings?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_accepted_or_declined_fo__c</fullName>
        <inlineHelpText>For decline, signed disclaimer obtained?</inlineHelpText>
        <label>Recommendation accepted or declined?</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soft_facts_noted__c</fullName>
        <inlineHelpText>Soft facts should be noted to support later recommendation</inlineHelpText>
        <label>Soft facts noted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_deposit_confirmed__c</fullName>
        <label>Source of deposit confirmed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_name__c</fullName>
        <label>Staff name</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>MMR Observation Forms</relationshipLabel>
        <relationshipName>MMR_Observation_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suitability_questions_and_importance_cor__c</fullName>
        <inlineHelpText>Complete needs analysis, summarising from importance from responses</inlineHelpText>
        <label>Suitability fields correctly completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>